--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="scss/main.scss"> <!-- location must be relative path from index file -->
 </head>
 <body>
-
+  Hello World
 </body>
 </html>
